# rust-encryption-junk-yard

./: README.md
aaaa/: readme.md
aix8-99/aix8/: Cargo.toml  README.md  run_all_tests.sh
aix8-99/aix8-1/: Cargo.toml
aix8-99/aix8-1/src/: lib.rs
aix8-99/aix8/fuzz/fuzz_targets/: fuzz_target_1.rs
aix8-99/aix8/tests/: crypto_tests.rs
aix8-main/: README.md
aix8-main/fuzz/: Cargo.toml  dict.txt
aix8-main/src/: lib.rs
app-main/app-main/: Cargo.toml  readme.md  rust-toolchain.toml
app-main/app-main/notes/: prompt.txt
app-main/app-main/src/: main.rs
app1-main/app1-main/: Cargo.toml  readme.md
app1-main/app1-main/src/: main.rs
ascon-80pq/: Cargo.toml  readme.md
ascon-80pq/src/: main.rs
copy/: copy.html  copy1.html
securecrypt/: Cargo.toml  readme.md
securecrypt/src/: main.rs
