[package]
name = "ascon-80pq"
version = "1.0.0"
edition = "2024"
rust-version = "1.94.0"
description = "File encryptor using Ascon (placeholder for 80pq mode)"
repository = "https://github.com/YOURUSERNAME/ascon-80pq"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["ascon", "aead", "encryption", "linux"]
categories = ["cryptography", "command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
ascon-aead = "0.5"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }
rpassword = "7"
tempfile = "3"
indicatif = "0.17"
fs-err = "2"
hex = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["mman"] }