[package]
name = "securecrypt"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

chacha20poly1305 = { version = "0.10", features = ["std"] }
argon2 = "0.5"
rand = "0.8"

zeroize = "1.7"
secrecy = "0.8"

anyhow = "1.0"
thiserror = "1.0"

tempfile = "3.10"
rpassword = "7.3"
